--- a/app/views/cliente/register.html.erb
+++ b/app/views/cliente/register.html.erb
@@ -39,7 +39,7 @@
 
 
 <% @user.custom_field_values.select {|v| (Setting.show_custom_fields_on_registration? && v.editable?) || v.required?}.each do |value| %>
-  #<p><%= custom_field_tag_with_label :user, value %></p>
+  <p><%= custom_field_tag_with_label :user, value %></p>
 
 <% end %>
 
