--- a/app/views/admin/index.html.erb
+++ b/app/views/admin/index.html.erb
@@ -1,4 +1,3 @@
-<h2>Início</h2>
 
 
 
@@ -45,7 +44,7 @@
         <div class="card text-center shadow-sm">
           <div class="card-body">
             <a href="https://pagina4.com">
-              <i class="fas fa-chart-bar fa-3x"></i>
+              <i class="fas fa-cogs fa-3x"></i>
             </a>
             <h5 class="card-title mt-3">Página 4</h5>
           </div>
