--- a/app/views/admin/index.html.erb
+++ b/app/views/admin/index.html.erb
@@ -8,9 +8,9 @@
         <div class="card text-center shadow-sm">
           <div class="card-body">
             <a href="https://pagina1.com">
-              <i class="fas fa-home fa-3x"></i>
+              <i class="fa fa-university" aria-hidden="true"></i>
             </a>
-            <h5 class="card-title mt-3">Página 1</h5>
+            <h5 class="card-title mt-3">Cadastro Empresas</h5>
           </div>
         </div>
       </div>
@@ -19,9 +19,9 @@
         <div class="card text-center shadow-sm">
           <div class="card-body">
             <a href="https://pagina2.com">
-              <i class="fas fa-user fa-3x"></i>
+              <i class="fa fa-user-circle-o" aria-hidden="true"></i>
             </a>
-            <h5 class="card-title mt-3">Página 2</h5>
+            <h5 class="card-title mt-3">Cadastrar Usuários</h5>
           </div>
         </div>
       </div>
@@ -30,9 +30,9 @@
         <div class="card text-center shadow-sm">
           <div class="card-body">
             <a href="https://pagina3.com">
-              <i class="fas fa-cogs fa-3x"></i>
+              <i class="fa fa-user-circle" aria-hidden="true"></i>
             </a>
-            <h5 class="card-title mt-3">Página 3</h5>
+            <h5 class="card-title mt-3">Cadastrar Analistas</h5>
           </div>
         </div>
       </div>
@@ -44,34 +44,14 @@
         <div class="card text-center shadow-sm">
           <div class="card-body">
             <a href="https://pagina4.com">
-              <i class="fas fa-cogs fa-3x"></i>
+              <i class="fa fa-cogs" aria-hidden="true"></i>
             </a>
-            <h5 class="card-title mt-3">Página 4</h5>
+            <h5 class="card-title mt-3">Configurações</h5>
           </div>
         </div>
       </div>
 
-      <div class="col-md-4 mb-3">
-        <div class="card text-center shadow-sm">
-          <div class="card-body">
-            <a href="https://pagina5.com">
-              <i class="fas fa-envelope fa-3x"></i>
-            </a>
-            <h5 class="card-title mt-3">Página 5</h5>
-          </div>
-        </div>
-      </div>
-
-      <div class="col-md-4 mb-3">
-        <div class="card text-center shadow-sm">
-          <div class="card-body">
-            <a href="https://pagina6.com">
-              <i class="fas fa-globe fa-3x"></i>
-            </a>
-            <h5 class="card-title mt-3">Página 6</h5>
-          </div>
-        </div>
-      </div>
+     
     </div>
   </div>
 
