--- a/app/views/analista/cliente_analista.html.erb
+++ b/app/views/analista/cliente_analista.html.erb
@@ -109,7 +109,7 @@
                     <% else %>
                             <td><% if coleta.dataInformacaoEnvio.nil? %>
                                       <br /><a href="/coleta/gerarcsv?id_coleta=<%= coleta.id %>" class="btn btn-sm btn-custom">Gerar Csv</a> 
-                                      <br /><a class="link-opacity-10-hover" href="coleta/informarEnvio?id_coleta=<%= coleta.id %>">Informar Envio</a> </td>
+                                      <br /><a href="coleta/informarEnvio?id_coleta=<%= coleta.id %>Informar Envio</a> </td>
                             <% end %>
                     <% end %>
 
