--- a/app/views/coleta/anualcriar.html.erb
+++ b/app/views/coleta/anualcriar.html.erb
@@ -9,7 +9,7 @@
               <%= f.hidden_field :tipoColeta, :value => "estacao" %>
                     <div class="box-title">Estação</div>
                     <br/>
-                    <div class="box-description">Coleta de dados de acessos:<br/>
+                    <div class="box-description">Coleta de dados de acessos:<br/><br/>
                     <p> <%= f.select :mes, [['Janeiro', 1], ['Fevereiro', 2], ['Março', 3], ['Abril', 4],  ['Maio', 5],  ['Junho', 6],  ['Julho', 7],  ['Agosto', 8],  ['Setembro', 9],  ['Outubro', 10],  ['Novembro', 11],  ['Dezembro', 12] ], class: "selecao" %></p>
                     </div>
                      <%= f.submit "Criar coleta", class:" icon icon-add float-right" %>
@@ -42,7 +42,7 @@
               <%= f.hidden_field :id_projeto, :value => @projeto.id %>
               <%= f.hidden_field :tipoColeta, :value => "encalcesContratados" %>
                     <div class="box-title">Encalces Contratados</div>
-                    <div class="box-description">Coleta de dados de Infraestrutura de Transporte
+                    <div class="box-description">Coleta de dados de Infraestrutura de Transporte<br/>
                     <p> <%= f.select :mes, [['Janeiro', 1], ['Fevereiro', 2], ['Março', 3], ['Abril', 4],  ['Maio', 5],  ['Junho', 6],  ['Julho', 7],  ['Agosto', 8],  ['Setembro', 9],  ['Outubro', 10],  ['Novembro', 11],  ['Dezembro', 12] ], class: "selecao" %></p>
                     </div>
                      <%= f.submit "Criar coleta", class:" icon icon-add float-right" %>
