--- a/app/views/cliente/index_cliente.html.erb
+++ b/app/views/cliente/index_cliente.html.erb
@@ -40,7 +40,7 @@
                           <td><a href="/coleta/semestralfazer?id_coleta=<%= coleta.id %>" class="btn btn-sm btn-custom">Fazer coleta</a> </td>
                         <% end %>
                         <% if coleta.tituloColeta == 'Coleta Anual' %>
-                          <td><a href="/coleta/anualfazer?id_coleta=<%= coleta.id %>" class="btn btn-sm btn-custom">Fazer coleta</a> </td>
+                          <td><a href="/coleta/anualfazer?id_coleta=<%= coleta.id %>" >Fazer coleta</a> </td>
                         <% end %>
                     <% else %>
                         <td>Enviada para o Analista</td>
