--- a/app/views/cliente/index_cliente.html.erb
+++ b/app/views/cliente/index_cliente.html.erb
@@ -12,7 +12,7 @@
     
 
 <div class="container mt-5">
-    <h2><strong><%= @organizacao.nome %></strong></h2><br/>
+    <div class="box-title"><%= @organizacao.nome %><BR/></div>
 
      <div class="box-title">COLETAS <BR/></div>
         <table class="table table-custom">
