--- a/app/views/cliente/index_cliente.html.erb
+++ b/app/views/cliente/index_cliente.html.erb
@@ -14,7 +14,7 @@
 <div class="container mt-5">
     <div class="box-title"><%= @organizacao.nome %><BR/></div>
 
-     <div class="box-title">COLETAS <BR/></div>
+     <div class="box-title">Coletas <BR/></div>
         <table class="table table-custom">
             <thead class="thead-light">
                 <tr>
