--- a/app/views/admin/index.html.erb
+++ b/app/views/admin/index.html.erb
@@ -7,7 +7,7 @@
       <div class="col-md-4 mb-3">
         <div class="card text-center shadow-sm">
           <div class="card-body">
-            <a href="https://pagina1.com">
+            <a href="http://201.76.43.189:88/admin/projects">
               <i class="fa fa-university" aria-hidden="true"></i>
             </a>
             <h5 class="card-title mt-3">Cadastro Empresas</h5>
@@ -18,7 +18,7 @@
       <div class="col-md-4 mb-3">
         <div class="card text-center shadow-sm">
           <div class="card-body">
-            <a href="https://pagina2.com">
+            <a href="http://201.76.43.189:88/users">
               <i class="fa fa-user-circle-o" aria-hidden="true"></i>
             </a>
             <h5 class="card-title mt-3">Cadastrar Usuários</h5>
@@ -29,7 +29,7 @@
       <div class="col-md-4 mb-3">
         <div class="card text-center shadow-sm">
           <div class="card-body">
-            <a href="https://pagina3.com">
+            <a href="http://201.76.43.189:88/cliente/register">
               <i class="fa fa-user-circle" aria-hidden="true"></i>
             </a>
             <h5 class="card-title mt-3">Cadastrar Analistas</h5>
@@ -44,7 +44,7 @@
       <div class="col-md-4 mb-3">
         <div class="card text-center shadow-sm">
           <div class="card-body">
-            <a href="https://pagina4.com">
+            <a href="http://201.76.43.189:88/settings">
               <i class="fa fa-cogs" aria-hidden="true"></i>
             </a>
             <h5 class="card-title mt-3">Configurações</h5>
@@ -57,13 +57,4 @@
   </div>
 
 
-<div class="container">
-    
 
-
-<div id="admin-index">
-  <%= render :partial => 'no_data' if @no_configuration_data %>
-  <%= render :partial => 'menu' %>
-</div>
-</div>
-<% html_title(l(:label_administration)) -%>
