--- a/app/views/cliente/register.html.erb
+++ b/app/views/cliente/register.html.erb
@@ -3,7 +3,7 @@
 <%= labelled_form_for @user, :url => register_path do |f| %>
 <%= error_messages_for 'user' %>
 
-<div class="card-body">
+<div class="box tabular">
 
 <br/>
 <h3>Dados do Usuário Analista</h3>
