--- a/app/views/admin/index.html.erb
+++ b/app/views/admin/index.html.erb
@@ -10,7 +10,7 @@
             <a href="http://201.76.43.189:88/admin/projects">
               <i class="fa fa-university" aria-hidden="true"></i>
             </a>
-            <h5 class="card-title mt-3">Cadastro Empresas</h5>
+            <a href="http://201.76.43.189:88/admin/projects"><h5 class="card-title mt-3">Cadastro Empresas</h5></a>
           </div>
         </div>
       </div>
@@ -21,7 +21,7 @@
             <a href="http://201.76.43.189:88/users">
               <i class="fa fa-user-circle-o" aria-hidden="true"></i>
             </a>
-            <h5 class="card-title mt-3">Cadastrar Usuários</h5>
+            <a href="http://201.76.43.189:88/users"><h5 class="card-title mt-3">Cadastrar Usuários</h5></a>
           </div>
         </div>
       </div>
@@ -32,7 +32,7 @@
             <a href="http://201.76.43.189:88/cliente/register">
               <i class="fa fa-user-circle" aria-hidden="true"></i>
             </a>
-            <h5 class="card-title mt-3">Cadastrar Analistas</h5>
+            <a href="http://201.76.43.189:88/cliente/register"><h5 class="card-title mt-3">Cadastrar Analistas</h5></a>
           </div>
         </div>
       </div>
@@ -47,7 +47,7 @@
             <a href="http://201.76.43.189:88/settings">
               <i class="fa fa-cogs" aria-hidden="true"></i>
             </a>
-            <h5 class="card-title mt-3">Configurações</h5>
+            <a href="http://201.76.43.189:88/settings"><h5 class="card-title mt-3">Configurações</h5></a>
           </div>
         </div>
       </div>
