--- a/app/views/analista/cliente_analista.html.erb
+++ b/app/views/analista/cliente_analista.html.erb
@@ -109,8 +109,8 @@
                             <td><a href="#" class="btn btn-sm btn-custom">Aguardando dados da coleta...</a> </td>
                     <% else %>
                             <td><% if coleta.dataInformacaoEnvio.nil? %>
-                                      <br /><a href="/coleta/gerarcsv?id_coleta=<%= coleta.id %>" class="btn btn-sm btn-custom">Gerar Csv</a> 
-                                      <br /><a href="coleta/informarEnvio?id_coleta=<%= coleta.id %>" class="link-underline-primary">Informar Envio</a> </td>
+                                      <br /><a href="/coleta/gerarcsv?id_coleta=<%= coleta.id %>" class="link-underline-primary">Gerar Csv</a> 
+                                      
                             <% end %>
                     <% end %>
 
