--- a/app/views/analista/cliente_analista.html.erb
+++ b/app/views/analista/cliente_analista.html.erb
@@ -87,7 +87,9 @@
                             <td><a href="#" class="btn btn-sm btn-custom">Aguardando dados da coleta...</a> </td>
                     <% else %>
                             <td><% if coleta.dataInformacaoEnvio.nil? %>
-                                      <br /><a href="/coleta/gerarcsv?id_coleta=<%= coleta.id %>" class="link-underline-primary">Gerar Csv</a> 
+                               <a href="/coleta/gerarcsv?id_coleta=<%= coleta.id %>" class="btn btn-primary">Gerar Csv</a>
+                                      
+ 
                                       
                             <% end %>
                     <% end %>
