--- a/app/views/analista/cliente_analista.html.erb
+++ b/app/views/analista/cliente_analista.html.erb
@@ -81,8 +81,8 @@
                 <tr>
                     <td><%= coleta.textoData %></td>
                    <td> <span class="badge <%= coleta.status == 'Atrasado' ? 'bg-danger' : coleta.status == 'Realizada' ? 'bg-success' : 'bg-secondary' %>">
-  <%= coleta.status %></td>
-</span>
+  <%= coleta.status %></span></td>
+
 
                     <td><%= coleta.tituloColeta %></td>
                     <td><%= coleta.tipoColeta %></td>
