--- a/app/views/analista/cliente_analista.html.erb
+++ b/app/views/analista/cliente_analista.html.erb
@@ -90,7 +90,7 @@
                             <td><a href="#" class="btn btn-sm btn-custom">Aguardando dados da coleta...</a> </td>
                     <% else %>
                             <td><% if coleta.dataInformacaoEnvio.nil? %>
-                               <a href="/coleta/gerarcsv?id_coleta=<%= coleta.id %>" class="btn btn-primary text-white">Gerar Csv</a>
+                               <a href="/coleta/gerarcsv?id_coleta=<%= coleta.id %>" class="btn btn-outline-secondary">Gerar Csv</a>
                                       
  
                                       
