--- a/app/views/analista/cliente_analista.html.erb
+++ b/app/views/analista/cliente_analista.html.erb
@@ -55,6 +55,31 @@
         </div>
     </div>
 
+<div class="container mt-5">
+     <div class="box-title">COLETAS <BR/></div>
+        <div class="container">
+        <div class="row justify-content-center">
+            <div class="col-md-4">
+                <div class="custom-box">
+                    <div class="box-title">MENSAL</div>
+                    <a href="/coleta/mensalcriar?id_projeto=<%= @organizacao.idProject %>" class="box-link">Criar coleta</a>
+                </div>
+            </div>
+            <div class="col-md-4">
+                <div class="custom-box">
+                    <div class="box-title">SEMESTRAL</div>
+                    <a href="/coleta/semestralcriar?id_projeto=<%= @organizacao.idProject %>" class="box-link">Criar coleta</a>
+                </div>
+            </div>
+            <div class="col-md-4">
+                <div class="custom-box">
+                    <div class="box-title">ANUAL</div>
+                    <a href="/coleta/anualcriar?id_projeto=<%= @organizacao.idProject %>" class="box-link">Criar coleta</a>
+                </div>
+            </div>
+        </div>
+    </div><br/>
+
 
 
 
