--- a/app/views/admin/index.html.erb
+++ b/app/views/admin/index.html.erb
@@ -52,6 +52,17 @@
         </div>
       </div>
 
+       <div class="col-md-4 mb-3">
+        <div class="card text-center shadow-sm">
+          <div class="card-body">
+            <a href=#>
+             <i class="fa fa-calendar" aria-hidden="true"></i>
+            </a>
+            <a href="http://201.76.43.189:88/users"><h5 class="card-title mt-3">Definir data Coleta</h5></a>
+          </div>
+        </div>
+      </div>
+
      
     </div>
   </div>
