--- a/app/views/analista/cliente_analista.html.erb
+++ b/app/views/analista/cliente_analista.html.erb
@@ -113,7 +113,7 @@
 
           <div class="container">
 <br/>
-        <div class="box-title">COLETAS <BR/></div>
+        <div class="box-title">CRIAR COLETAS <BR/></div>
         <div class="row justify-content-center">
             <div class="col-md-4">
                 <div class="custom-box">
