--- a/app/views/analista/cliente_analista.html.erb
+++ b/app/views/analista/cliente_analista.html.erb
@@ -62,11 +62,11 @@
      <div class="box-title">COLETAS 2024 <BR/></div>
 
 <div class="container mt-5">
-    <div class="d-flex justify-content-center">
+   <div class="d-flex justify-content-center">
       <div class="btn-group" role="group">
-        <button type="button" class="btn btn-secondary mx-1" id="mensal" onclick="setActive('mensal')">Mensal</button>
-        <button type="button" class="btn btn-secondary mx-1" id="semestral" onclick="setActive('semestral')">Semestral</button>
-        <button type="button" class="btn btn-secondary mx-1" id="anual" onclick="setActive('anual')">Anual</button>
+        <button type="button" class="btn btn-secondary rounded-pill mx-1" id="mensal" onclick="setActive('mensal')">Mensal</button>
+        <button type="button" class="btn btn-secondary rounded-pill mx-1" id="semestral" onclick="setActive('semestral')">Semestral</button>
+        <button type="button" class="btn btn-secondary rounded-pill mx-1" id="anual" onclick="setActive('anual')">Anual</button>
       </div>
     </div>
   </div>
