--- a/app/views/analista/cliente_analista.html.erb
+++ b/app/views/analista/cliente_analista.html.erb
@@ -64,6 +64,12 @@
 <div class="container mt-5">
    <div class="d-flex justify-content-center">
       <div class="btn-group" role="group">
+        <a href="/analista/cliente_analista?id_projeto=<%= project.id %>&tipo_coleta=mensal" class="btn btn-secondary rounded-pill mx-1">Mensal</a>
+        <a href="/analista/cliente_analista?id_projeto=<%= project.id %>&tipo_coleta=semestral" class="btn btn-secondary rounded-pill mx-1">Semestral</a>
+        <a href="/analista/cliente_analista?id_projeto=<%= project.id %>&tipo_coleta=anual" class="btn btn-secondary rounded-pill mx-1">Anual</a>
+      </div>
+
+      <div class="btn-group" role="group">
         <button type="button" class="btn btn-secondary rounded-pill mx-1" id="mensal" onclick="setActive('mensal')">Mensal</button>
         <button type="button" class="btn btn-secondary rounded-pill mx-1" id="semestral" onclick="setActive('semestral')">Semestral</button>
         <button type="button" class="btn btn-secondary rounded-pill mx-1" id="anual" onclick="setActive('anual')">Anual</button>
