--- a/app/views/analista/cliente_analista.html.erb
+++ b/app/views/analista/cliente_analista.html.erb
@@ -64,7 +64,7 @@
 <div class="container mt-5">
    <div class="d-flex justify-content-center">
       <div class="btn-group" role="group">
-        <a href="/analista/cliente_analista?id_projeto=<%= @organizacao.idProject  %>&titulo_coleta='Coleta Mensal'" class="btn btn-secondary rounded-pill mx-1">Mensal</a>
+        <a href="/analista/cliente_analista?id_projeto=<%= @organizacao.idProject  %>&titulo_coleta='Coleta Mensal'>" class="btn btn-secondary rounded-pill mx-1" >Mensal</a>
         <a href="/analista/cliente_analista?id_projeto=<%= @organizacao.idProject  %>&titulo_coleta='Coleta Semestral" class="btn btn-secondary rounded-pill mx-1">Semestral</a>
         <a href="/analista/cliente_analista?id_projeto=<%= @organizacao.idProject  %>&titulo_coleta='Coleta Anual" class="btn btn-secondary rounded-pill mx-1">Anual</a>
       </div>
