--- a/app/views/analista/index_analista.html.erb
+++ b/app/views/analista/index_analista.html.erb
@@ -17,7 +17,7 @@
                        <% end %>
                        </p>
                     <% end %>
-                    <a href="/analista/cliente_analista?id_projeto=<%= project.id %>" class="box-link">ver dados</a>
+                    <a href="/analista/cliente_analista?id_projeto=<%= project.id %>&titulo_coleta=ColetaMensal" class="box-link">ver dados</a>
                 </div>
               </div>
           <% end %>
