--- a/app/views/funny_plugin/_configuracao_plugin.erb
+++ b/app/views/funny_plugin/_configuracao_plugin.erb
@@ -6,8 +6,8 @@
 
 
 <p>
-  <label for="limiteColetaMensal">Dia limite da Coleta Mensal</label>
-  <input type="text" id="limiteColetaMensal" value="<%= settings['limiteColetaMensal'] %>" name="settings[limiteColetaMensal]" required style="width:90%"/>
+  <label for="settings_limiteColetaMensal">Dia limite da Coleta Mensal</label>
+  <input type="text" id="settings_limiteColetaMensal" value="<%= settings['limiteColetaMensal'] %>" name="settings[limiteColetaMensal]" required style="width:90%"/>
 </p>
 <br />
 
