--- a/app/views/funny_plugin/_configuracao_plugin.erb
+++ b/app/views/funny_plugin/_configuracao_plugin.erb
@@ -7,25 +7,25 @@
 
 <p>
   <label for="settings_limiteColetaMensal">Dia limite da Coleta Mensal</label>
-  <input type="text" id="settings_limiteColetaMensal" value="<%= settings['limiteColetaMensal'] %>" name="settings[limiteColetaMensal]" required style="width:90%"/>
+  <input type="number" id="settings_limiteColetaMensal" value="<%= settings['limiteColetaMensal'] %>" name="settings[limiteColetaMensal]" required style="width:90%"/>
 </p>
 <br />
 
 <p>
   <label for="limiteColetaAnual ">Data limite da Coleta Anual</label>
-  <input type="text" id="limiteColetaAnual " value="<%= settings['limiteColetaAnual '] %>" name="settings[limiteColetaAnual ]" required style="width:90%"/>
+  <input type="date" id="limiteColetaAnual " value="<%= settings['limiteColetaAnual '] %>" name="settings[limiteColetaAnual ]" required style="width:90%"/>
 </p>
 <br />
 
 <p>
   <label for="limiteColetaSemestralPrim ">Data limite da Coleta Semestral - 1º semestre</label>
-  <input type="text" id="limiteColetaSemestralPrim " value="<%= settings['limiteColetaSemestralPrim '] %>" name="settings[limiteColetaSemestralPrim ]" required style="width:90%"/>
+  <input type="date" id="limiteColetaSemestralPrim " value="<%= settings['limiteColetaSemestralPrim '] %>" name="settings[limiteColetaSemestralPrim ]" required style="width:90%"/>
 </p>
 <br />
 
 <p>
   <label for="limiteColetaSemestralSeg ">Data limite da Coleta Semestral - 2º semestre</label>
-  <input type="text" id="limiteColetaSemestralSeg " value="<%= settings['limiteColetaSemestralSeg '] %>" name="settings[limiteColetaSemestralSeg ]" required style="width:90%"/>
+  <input type="date" id="limiteColetaSemestralSeg " value="<%= settings['limiteColetaSemestralSeg '] %>" name="settings[limiteColetaSemestralSeg ]" required style="width:90%"/>
 </p>
 
 <br />
