--- a/app/views/cliente/index_cliente.html.erb
+++ b/app/views/cliente/index_cliente.html.erb
@@ -41,7 +41,7 @@
                           <td><a href="/coleta/semestralfazer?id_coleta=<%= coleta.id %>" >Fazer coleta</a> </td>
                         <% end %>
                         <% if coleta.tituloColeta == 'Coleta Anual' %>
-                          <td><a href="/coleta/anualfazer?id_coleta=<%= coleta.id %>" >Fazer coleta</a> </td>
+                          <td><a href="/coleta/anualfazer?id_coleta=<%= coleta.id %> class="btn btn-outline-secondary"" >Fazer coleta</a> </td>
                         <% end %>
                     <% else %>
                         <td>Enviada para o Analista</td>
