--- a/app/views/analista/cliente_analista.html.erb
+++ b/app/views/analista/cliente_analista.html.erb
@@ -90,7 +90,8 @@
                 <% for coleta in @coletas %>
                 <tr>
                     <td><%= coleta.textoData %></td>
-                   <td> <span class="badge rounded-pill <%= coleta.status == 'Coleta Atrasada' ? 'bg-danger' : coleta.status == 'Coleta Realizada' ? 'bg-success' : 'bg-secondary' %>"></span></td>
+                   
+                   <td><span class="badge rounded-pill <%= coleta.status == 'Coleta Atrasada' ? 'bg-danger' : coleta.status == 'Coleta Realizada' ? 'bg-success' : 'bg-secondary' %>"><%= coleta.status %></span></td>
                    <td><%= coleta.tituloColeta %></td>
                    <td><%= coleta.tipoColeta %></td>
                     <% if coleta.dataRealizacao.nil? %>
