--- a/app/views/cliente/index_cliente.html.erb
+++ b/app/views/cliente/index_cliente.html.erb
@@ -30,8 +30,8 @@
                 <% for coleta in @coletas %>
                 <tr>
                     <td><%= coleta.textoData %></td>
-                    <td> <span class="badge rounded-pill <%= coleta.status == 'Aguardando Coleta' ? 'bg-danger' : coleta.status == 'Coleta Enviada' ? 'bg-success' : 'bg-secondary' %>">
-                   
+                    
+                     <td><span class="badge rounded-pill <%= coleta.status == 'Aguardando Coleta' ? 'bg-danger' : coleta.status == 'Coleta Enviada' ? 'bg-success' : 'bg-secondary' %>"><%= coleta.status %></span></td>
                     <td><%= coleta.tituloColeta %></td>
                     <td><%= coleta.tipoColeta %></td>
                     <% if coleta.dataRealizacao.nil? %>
