--- a/app/views/analista/cliente_analista.html.erb
+++ b/app/views/analista/cliente_analista.html.erb
@@ -64,7 +64,7 @@
 <div class="container mt-5">
    <div class="d-flex justify-content-center">
       <div class="btn-group" role="group">
-        <a href="/analista/cliente_analista?id_projeto=<%= @organizacao.idProject  %>&titulo_coleta=ColetaMensal" class="btn <%= @tituloColeta == 'ColetaMensal' ? 'btn-outline-success': 'btn-outline-secondary' %> btn-outline-primary" >Mensal</a>
+        <a href="/analista/cliente_analista?id_projeto=<%= @organizacao.idProject  %>&titulo_coleta=ColetaMensal" class="btn <%= @tituloColeta == 'ColetaMensal' ? 'btn-outline-success': 'btn-outline-secondary' %> btn-outline-primary btn-lg" >Mensal</a>
         <a href="/analista/cliente_analista?id_projeto=<%= @organizacao.idProject  %>&titulo_coleta=ColetaSemestral" class="badge <%= @tituloColeta == 'ColetaSemestral' ? 'bg-success': 'bg-secondary' %> rounded-pill mx-1">Semestral</a>
         <a href="/analista/cliente_analista?id_projeto=<%= @organizacao.idProject  %>&titulo_coleta=ColetaAnual" class="badge <%= @tituloColeta == 'ColetaAnual' ? 'bg-success': 'bg-secondary' %> rounded-pill mx-1">Anual</a>
       </div>
