--- a/app/views/analista/cliente_analista.html.erb
+++ b/app/views/analista/cliente_analista.html.erb
@@ -64,9 +64,9 @@
 <div class="container mt-5">
    <div class="d-flex justify-content-center">
       <div class="btn-group" role="group">
-        <a href="/analista/cliente_analista?id_projeto=<%= @organizacao.idProject  %>&titulo_coleta=ColetaMensal" class="btn <%= @tituloColeta == 'ColetaMensal' ? 'btn-success  ': 'btn-secondary ' %> btn-primary rounded-pill mx-1 btn-lg" >Mensal</a>
-        <a href="/analista/cliente_analista?id_projeto=<%= @organizacao.idProject  %>&titulo_coleta=ColetaSemestral" class="btn <%= @tituloColeta == 'ColetaSemestral' ? 'btn-success ': 'btn-secondary ' %> btn-primary rounded-pill mx-1 btn-lg">Semestral</a>
-        <a href="/analista/cliente_analista?id_projeto=<%= @organizacao.idProject  %>&titulo_coleta=ColetaAnual" class="btn <%= @tituloColeta == 'ColetaAnual' ? 'btn-success ': 'btn-secondary ' %> btn-primary rounded-pill mx-1 btn-lg">Anual</a>
+        <a href="/analista/cliente_analista?id_projeto=<%= @organizacao.idProject  %>&titulo_coleta=ColetaMensal" class="btn <%= @tituloColeta == 'ColetaMensal' ? 'btn-success  ': 'btn-secondary ' %> btn-primary rounded-pill mx-1 btn-lg text-white" >Mensal</a>
+        <a href="/analista/cliente_analista?id_projeto=<%= @organizacao.idProject  %>&titulo_coleta=ColetaSemestral" class="btn <%= @tituloColeta == 'ColetaSemestral' ? 'btn-success ': 'btn-secondary ' %> btn-primary rounded-pill mx-1 btn-lg text-white">Semestral</a>
+        <a href="/analista/cliente_analista?id_projeto=<%= @organizacao.idProject  %>&titulo_coleta=ColetaAnual" class="btn <%= @tituloColeta == 'ColetaAnual' ? 'btn-success ': 'btn-secondary ' %> btn-primary rounded-pill mx-1 btn-lg text-white">Anual</a>
       </div>
 
     </div>
