--- a/app/views/analista/cliente_analista.html.erb
+++ b/app/views/analista/cliente_analista.html.erb
@@ -61,35 +61,26 @@
 <div class="container mt-5">
      <div class="box-title">COLETAS 2024 <BR/></div>
 
-<div class="container mt-5">
-   <div class="d-flex justify-content-center">
-      <div class="btn-group" role="group">
-        <a href="/analista/cliente_analista?id_projeto=<%= @organizacao.idProject  %>&titulo_coleta=ColetaMensal" class="btn <%= @tituloColeta == 'ColetaMensal' ? 'btn-success  ': 'btn-secondary ' %> btn-primary rounded-pill mx-1 btn-lg text-white" >Mensal</a>
-        <a href="/analista/cliente_analista?id_projeto=<%= @organizacao.idProject  %>&titulo_coleta=ColetaSemestral" class="btn <%= @tituloColeta == 'ColetaSemestral' ? 'btn-success ': 'btn-secondary ' %> btn-primary rounded-pill mx-1 btn-lg text-white">Semestral</a>
-        <a href="/analista/cliente_analista?id_projeto=<%= @organizacao.idProject  %>&titulo_coleta=ColetaAnual" class="btn <%= @tituloColeta == 'ColetaAnual' ? 'btn-success ': 'btn-secondary ' %> btn-primary rounded-pill mx-1 btn-lg text-white">Anual</a>
-      </div>
 
-    </div>
-  </div>
 
 
 <div class="row justify-content-center">
             <div class="col-md-4">
                 <div class="custom-box">
                  <div class="box-title">Mensal</div>
-                  <a href="/analista/cliente_analista?id_projeto=<%= @organizacao.idProject  %>&titulo_coleta=ColetaMensal" class="btn <%= @tituloColeta == 'ColetaMensal' ? 'btn-success  ': 'btn-secondary ' %> btn-primary btn-lg" >Mensal</a>
+                  <a href="/analista/cliente_analista?id_projeto=<%= @organizacao.idProject  %>&titulo_coleta=ColetaMensal" class="btn <%= @tituloColeta == 'ColetaMensal' ? 'btn-success  ': 'btn-secondary ' %> btn-primary btn-lg text-white" >Filtrar</a>
                 </div>
             </div>
             <div class="col-md-4">
                 <div class="custom-box">
                 <div class="box-title">Semestral</div>
-                    <a href="/analista/cliente_analista?id_projeto=<%= @organizacao.idProject  %>&titulo_coleta=ColetaSemestral" class="btn <%= @tituloColeta == 'ColetaSemestral' ? 'btn-success ': 'btn-secondary ' %> btn-primary  btn-lg">Semestral</a>
+                    <a href="/analista/cliente_analista?id_projeto=<%= @organizacao.idProject  %>&titulo_coleta=ColetaSemestral" class="btn <%= @tituloColeta == 'ColetaSemestral' ? 'btn-success ': 'btn-secondary ' %> btn-primary  btn-lg text-white">Filtrar</a>
                 </div>
             </div>
             <div class="col-md-4">
                 <div class="custom-box">
                     <div class="box-title">Anual</div>
-                    <a href="/analista/cliente_analista?id_projeto=<%= @organizacao.idProject  %>&titulo_coleta=ColetaAnual" class="btn <%= @tituloColeta == 'ColetaAnual' ? 'btn-success ': 'btn-secondary ' %> btn-primary  btn-lg">Anual</a>
+                    <a href="/analista/cliente_analista?id_projeto=<%= @organizacao.idProject  %>&titulo_coleta=ColetaAnual" class="btn <%= @tituloColeta == 'ColetaAnual' ? 'btn-success ': 'btn-secondary ' %> btn-primary  btn-lg text-white">Filtrar</a>
                 </div>
             </div>
         </div>
