--- a/app/views/analista/cliente_analista.html.erb
+++ b/app/views/analista/cliente_analista.html.erb
@@ -133,19 +133,19 @@
             <div class="col-md-4">
                 <div class="custom-box">
                     <div class="box-title">MENSAL</div>
-                    <a href="/coleta/mensalcriar?id_projeto=<%= @organizacao.idProject %>" class="box-link">Criar coleta</a>
+                    <a href="/coleta/mensalcriar?id_projeto=<%= @organizacao.idProject %>" class="btn btn-outline-secondary">Criar coleta</a>
                 </div>
             </div>
             <div class="col-md-4">
                 <div class="custom-box">
                     <div class="box-title">SEMESTRAL</div>
-                    <a href="/coleta/semestralcriar?id_projeto=<%= @organizacao.idProject %>" class="box-link">Criar coleta</a>
+                    <a href="/coleta/semestralcriar?id_projeto=<%= @organizacao.idProject %>" class="btn btn-outline-secondary">Criar coleta</a>
                 </div>
             </div>
             <div class="col-md-4">
                 <div class="custom-box">
                     <div class="box-title">ANUAL</div>
-                    <a href="/coleta/anualcriar?id_projeto=<%= @organizacao.idProject %>" class="box-link">Criar coleta</a>
+                    <a href="/coleta/anualcriar?id_projeto=<%= @organizacao.idProject %>" class="btn btn-outline-secondary">Criar coleta</a>
                 </div>
             </div>
         </div>
