--- a/app/views/admin/index.html.erb
+++ b/app/views/admin/index.html.erb
@@ -2,7 +2,8 @@
 
 
 <div class="container mt-4">
-   <h3 class="card-title mt-3">Cadastro Empresas</h5>Painel de Administração</h3>
+   <h3 class="card-title mt-3">Painel de Administração</h3>
+   <br/><br/>
     <div class="row">
       <!-- First Row (3 boxes) -->
       <div class="col-md-4 mb-3">
