--- a/app/views/admin/index.html.erb
+++ b/app/views/admin/index.html.erb
@@ -60,7 +60,7 @@
             <a href=#>
              <i class="fa fa-calendar" aria-hidden="true"></i>
             </a>
-            <a href="http://201.76.43.189:88/users"><h5 class="card-title mt-3">Definir data Coleta</h5></a>
+            <a href="http://201.76.43.189:88/settings/plugin/funny_plugin"><h5 class="card-title mt-3">Definir data Coleta</h5></a>
           </div>
         </div>
       </div>
