--- a/app/views/funny_plugin/_configuracao_plugin.erb
+++ b/app/views/funny_plugin/_configuracao_plugin.erb
@@ -40,7 +40,7 @@
 
                      <div class="row mb-3">
                        <div class="col-md-6">
-                          <p><%= f.label :limiteColetaAnual, "Data limite da Coleta Anual", class: "form-label" %></p>
+                          <p><label for="limiteColetaAnual ">Data limite da Coleta Anual</label></p>
                           <input type="date" id="limiteColetaAnual " value="<%= settings['limiteColetaAnual '] %>" name="settings[limiteColetaAnual ]" required style="width:90%"/>
                        </div>
                        
@@ -48,7 +48,7 @@
 
                         <div class="row mb-3">
                        <div class="col-md-6">
-                          <p><%= f.label :limiteColetaSemestralPrim, "Data limite da Coleta Semestral - 1º semestre", class: "form-label" %></p>
+                          <p><label for="limiteColetaSemestralPrim ">Data limite da Coleta Semestral - 1º semestre</label></p>
                           <input type="date" id="limiteColetaSemestralPrim " value="<%= settings['limiteColetaSemestralPrim '] %>" name="settings[limiteColetaSemestralPrim ]" required style="width:90%"/>
                        </div>
                        
@@ -56,7 +56,7 @@
 
                      <div class="row mb-3">
                        <div class="col-md-6">
-                          <p><%= f.label :limiteColetaSemestralSeg, "Data limite da Coleta Semestral - 2º semestre", class: "form-label" %></p>
+                          <p><label for="limiteColetaSemestralSeg ">Data limite da Coleta Semestral - 2º semestre</label></p>
                           <input type="date" id="limiteColetaSemestralSeg " value="<%= settings['limiteColetaSemestralSeg '] %>" name="settings[limiteColetaSemestralSeg ]" required style="width:90%"/>
                        </div>
                        
