--- a/app/views/funny_plugin/_configuracao_plugin.erb
+++ b/app/views/funny_plugin/_configuracao_plugin.erb
@@ -32,7 +32,7 @@
 
                  <div class="row mb-3">
                        <div class="col-md-6">
-                          <p><%= f.label :settings_limiteColetaMensal, "Dia limite da coleta mensal", class: "form-label" %></p>
+                          <p><label for="settings_limiteColetaMensal">Dia limite da Coleta Mensal</label></p>
                           <input type="number" id="settings_limiteColetaMensal" value="<%= settings['limiteColetaMensal'] %>" name="settings[limiteColetaMensal]" required style="width:90%"/>
                        </div>
                        
