--- a/app/views/cliente/index_cliente.html.erb
+++ b/app/views/cliente/index_cliente.html.erb
@@ -6,6 +6,28 @@
 <div class="container">
   
        <div class="row justify-content-center">
+
+
+
+<div class="container mt-5">
+<h3><strong><%=@organizacao.nome %></strong></h3><br/>
+        <h5><strong>Dados da Empresa</strong></h5>
+        <div class="card">
+            <div class="card-body d-flex">
+                <div class="me-3">
+                    <strong>Cnpj:</strong> <%= @organizacao.cnpj %><br/>
+                    <strong>Endereço :</strong> <%= @organizacao.endereco %><br/>
+                    <strong>Cep:</strong> <%= @organizacao.cep %><br/>
+                    <strong>Uf:</strong> <%= @organizacao.uf %><br/>
+                    <strong>Telefone:</strong> <%= @organizacao.telefone %><br/>
+                    <strong>Email:</strong> <%= @organizacao.email %><br/>
+                    <strong>Serviços de Telecom:</strong> <%= @organizacao.servicos %>
+                </div>
+               
+               
+            </div>
+        </div>
+    </div>
             
             
        
